# nonebot-plugin-taygedo-helper

./: pyproject.toml
nonebot_plugin_taygedo_helper/: __init__.py  taygedoapi.py
